Update : implement assets

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="title">
           <div class="title_logo">
-            <img src="" alt="" />
+            <img src="./assets/logo.png" alt="" />
           </div>
           <div class="title_text">
             <h1>ROCK PAPER SCRISSORS</h1>
@@ -32,36 +32,63 @@
     </header>
     <!-- Header end -->
 
-    <div class="container m-auto">
-      <main class="main text-center">
+    <div class="container">
+      <main class="main">
         <!-- Player section start -->
         <div class="player">
           <div class="user_title">
             <h2>PLAYER 1</h2>
           </div>
-          <div class="player_games games"></div>
+          <div class="user_choice">
+            <button>
+              <img src="./assets/batu.png" alt="" />
+            </button>
+
+            <button>
+              <img src="./assets/kertas.png" alt="" />
+            </button>
+
+            <button>
+              <img src="./assets/gunting.png" alt="" />
+            </button>
+          </div>
         </div>
         <!-- Player section end -->
 
         <!-- Versus section start -->
         <div class="versus">
           <h1>VS</h1>
+          <div class="versus_status">
+            <h1>PLAYER 1 WIN</h1>
+          </div>
         </div>
         <!-- Versus section end-->
 
         <!-- Com section start -->
-        <div class="com">
+        <div class="player">
           <div class="user_title">
             <h2>COM</h2>
           </div>
-          <div class="com_games games"></div>
+          <div class="user_choice">
+            <button>
+              <img src="./assets/batu.png" alt="" />
+            </button>
+
+            <button>
+              <img src="./assets/kertas.png" alt="" />
+            </button>
+
+            <button>
+              <img src="./assets/gunting.png" alt="" />
+            </button>
+          </div>
         </div>
         <!-- Com section end-->
 
         <!-- Reset button start -->
         <div class="reset">
-          <button type="reset" class="btn btn-lg btn-outline-primary btn-dark">
-            Reset
+          <button type="reset">
+            <img src="./assets/refresh.png" alt="" />
           </button>
         </div>
         <!-- Reset button end -->
