Update : change id to class

--- a/games.html
+++ b/games.html
@@ -37,15 +37,15 @@
             <h2>PLAYER</h2>
           </div>
           <div class="user_choice">
-            <button id="batu-player">
+            <button class="batu">
               <img src="./src/assets/images/batu.png" alt="batu" />
             </button>
 
-            <button id="kertas-player">
+            <button class="kertas">
               <img src="./src/assets/images/kertas.png" alt="kertas" />
             </button>
 
-            <button id="gunting-player">
+            <button class="gunting">
               <img src="./src/assets/images/gunting.png" alt="gunting" />
             </button>
           </div>
@@ -62,15 +62,15 @@
             <h2>COM</h2>
           </div>
           <div class="user_choice">
-            <button id="batu-com">
+            <button class="batu">
               <img src="./src/assets/images/batu.png" alt="batu" />
             </button>
 
-            <button id="kertas-com">
+            <button class="kertas">
               <img src="./src/assets/images/kertas.png" alt="kertas" />
             </button>
 
-            <button id="gunting-com">
+            <button class="gunting">
               <img src="./src/assets/images/gunting.png" alt="gunting" />
             </button>
           </div>
@@ -87,6 +87,5 @@
       </main>
     </div>
   </body>
-  <!-- <script src="./src/scripts/script.js"></script> -->
-  <script src="./src/scripts/scriptBasic.js"></script>
+  <script src="./src/scripts/script.js"></script>
 </html>
