Update : add class for better selection

--- a/games.html
+++ b/games.html
@@ -37,15 +37,15 @@
             <h2>PLAYER</h2>
           </div>
           <div class="user_choice">
-            <button class="batu">
+            <button class="choice batu">
               <img src="./src/assets/images/batu.png" alt="batu" />
             </button>
 
-            <button class="kertas">
+            <button class="choice kertas">
               <img src="./src/assets/images/kertas.png" alt="kertas" />
             </button>
 
-            <button class="gunting">
+            <button class="choice gunting">
               <img src="./src/assets/images/gunting.png" alt="gunting" />
             </button>
           </div>
@@ -62,15 +62,15 @@
             <h2>COM</h2>
           </div>
           <div class="user_choice">
-            <button class="batu">
+            <button class="choice batu">
               <img src="./src/assets/images/batu.png" alt="batu" />
             </button>
 
-            <button class="kertas">
+            <button class="choice kertas">
               <img src="./src/assets/images/kertas.png" alt="kertas" />
             </button>
 
-            <button class="gunting">
+            <button class="choice gunting">
               <img src="./src/assets/images/gunting.png" alt="gunting" />
             </button>
           </div>
