--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A landing page games" />
     <link href="./src/assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./src/styles/responsive.css" rel="stylesheet" />
     <link href="./src/styles/style.css" rel="stylesheet" />
