Update : add explicit image size

--- a/games.html
+++ b/games.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A trial games" />
     <link href="./src/assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./src/styles/games.css" rel="stylesheet" />
     <title>Try Out The Games</title>
@@ -19,7 +20,13 @@
         </div>
         <div class="title">
           <div class="title_logo">
-            <img src="./src/assets/images/logo.png" alt="" />
+            <img
+              loading="lazy"
+              width="80px"
+              height="80px"
+              src="./src/assets/images/logo.png"
+              alt=""
+            />
           </div>
           <div class="title_text">
             <h1>ROCK PAPER SCRISSORS</h1>
@@ -38,15 +45,33 @@
           </div>
           <div class="user_choice">
             <button class="choice batu">
-              <img src="./src/assets/images/batu.png" alt="batu" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/batu.png"
+                alt="batu"
+              />
             </button>
 
             <button class="choice kertas">
-              <img src="./src/assets/images/kertas.png" alt="kertas" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/kertas.png"
+                alt="kertas"
+              />
             </button>
 
             <button class="choice gunting">
-              <img src="./src/assets/images/gunting.png" alt="gunting" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/gunting.png"
+                alt="gunting"
+              />
             </button>
           </div>
         </div>
@@ -63,15 +88,33 @@
           </div>
           <div class="user_choice">
             <button class="choice batu">
-              <img src="./src/assets/images/batu.png" alt="batu" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/batu.png"
+                alt="batu"
+              />
             </button>
 
             <button class="choice kertas">
-              <img src="./src/assets/images/kertas.png" alt="kertas" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/kertas.png"
+                alt="kertas"
+              />
             </button>
 
             <button class="choice gunting">
-              <img src="./src/assets/images/gunting.png" alt="gunting" />
+              <img
+                loading="lazy"
+                width="128px"
+                height="128px"
+                src="./src/assets/images/gunting.png"
+                alt="gunting"
+              />
             </button>
           </div>
         </div>
@@ -80,7 +123,13 @@
         <!-- Reset button start -->
         <div class="reset">
           <button id="reset" type="reset">
-            <img src="./src/assets/images/refresh.png" alt="" />
+            <img
+              loading="lazy"
+              width="68px"
+              height="68px"
+              src="./src/assets/images/refresh.png"
+              alt="reset button"
+            />
           </button>
         </div>
         <!-- Reset button end -->
