--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A landing page games" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/assets/icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/assets/icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/assets/icon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./src/assets/icon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="apple-mobile-web-app-title" content="Simple Javascript Games" />
+    <meta name="application-name" content="Simple Javascript Games" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <link href="./src/assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./src/styles/responsive.css" rel="stylesheet" />
     <link href="./src/styles/style.css" rel="stylesheet" />
