Update : change back route

--- a/games.html
+++ b/games.html
@@ -41,7 +41,7 @@
     <header>
       <nav>
         <div class="back_button">
-          <a href="/index.html">
+          <a href="index.html">
             <h2><</h2>
           </a>
         </div>
