Update : add comments

--- a/games.html
+++ b/games.html
@@ -1,3 +1,4 @@
+<!-- Copyright of Sami Kalammallah 2021 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,6 +17,7 @@
       sizes="32x32"
       href="./src/assets/icon/favicon-32x32.png"
     />
+    <!-- Copyright of Sami Kalammallah 2021 -->
     <link
       rel="icon"
       type="image/png"
@@ -133,6 +135,7 @@
                 alt="kertas"
               />
             </button>
+            <!-- Copyright of Sami Kalammallah 2021 -->
 
             <button class="choice gunting">
               <img
@@ -165,3 +168,4 @@
   </body>
   <script src="./src/scripts/script.js"></script>
 </html>
+<!-- Copyright of Sami Kalammallah 2021 -->
